--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebService/appsettings.Development.json
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebService/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "Databases": {
+        "Application": "Server=localhost;Database=MEAL_DEAL_APPLICATION;Integrated Security=True;TrustServerCertificate=True",
+        "Identity": "Server=localhost;Database=MEAL_DEAL_IDENTITY;Integrated Security=True;TrustServerCertificate=True"
     }
-  }
 }
