--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebService/AvansMealDeal.UserInterface.WebService.csproj
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebService/AvansMealDeal.UserInterface.WebService.csproj
@@ -15,10 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\AvansMealDeal.Application.Services\AvansMealDeal.Application.Services.csproj" />
     <ProjectReference Include="..\AvansMealDeal.Infrastructure.Application.SQLServer\AvansMealDeal.Infrastructure.Application.SQLServer.csproj" />
     <ProjectReference Include="..\AvansMealDeal.Infrastructure.Identity.SQLServer\AvansMealDeal.Infrastructure.Identity.SQLServer.csproj" />
   </ItemGroup>
