--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebService/AvansMealDeal.UserInterface.WebService.csproj
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebService/AvansMealDeal.UserInterface.WebService.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HotChocolate.AspNetCore" Version="14.2.0" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="14.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
