--- a/.github/workflows/main_avansmealdeal-webapp.yml
+++ b/.github/workflows/main_avansmealdeal-webapp.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: webapp
+          name: webapp-publish
           path: ${{github.workspace}}/webapp-publish
 
   deploy:
@@ -52,7 +52,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: webapp
+          name: webapp-publish
       
       - name: Login to Azure
         uses: azure/login@v2
