--- a/.github/workflows/main_avansmealdeal-webapp.yml
+++ b/.github/workflows/main_avansmealdeal-webapp.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Web App test and deploy
 
 on:
@@ -60,6 +57,18 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_58E035AF49DB4EE0A1A94BA1ED13FC82 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5DA1BA0A069C4B3AB68D3CCC2236E2BD }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_CAAC00DEFFD3469584D211669871C2F8 }}
+
+      - name: Install EF migrations tool
+        run: dotnet tool install --global dotnet-ef
+      
+      - name: Make EF migrations tool accessible
+        run: echo "${{ github.workspace }}/.dotnet/tools" >> $GITHUB_PATH
+      
+      - name: Deploy EF migrations application database
+        run: dotnet ef --project AvansMealDeal/AvansMealDeal.Infrastructure.Application.SQLServer/AvansMealDeal.Infrastructure.Application.SQLServer.csproj database update --context DbContextApplicationSqlServer --connection "$DATABASES_APPLICATION"
+
+      - name: Deploy EF migrations identity database
+        run: dotnet ef --project AvansMealDeal/AvansMealDeal.Infrastructure.Identity.SQLServer/AvansMealDeal.Infrastructure.Identity.SQLServer.csproj database update --context DbContextIdentitySqlServer --connection "$DATABASES_IDENTITY"
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
