--- a/.github/workflows/main_avansmealdeal-webservice.yml
+++ b/.github/workflows/main_avansmealdeal-webservice.yml
@@ -43,10 +43,10 @@ jobs:
         run: echo "${{ github.workspace }}/.dotnet/tools" >> $GITHUB_PATH
       
       - name: Deploy EF migrations application database
-        run: dotnet ef --project AvansMealDeal/AvansMealDeal.Infrastructure.Application.SQLServer/AvansMealDeal.Infrastructure.Application.SQLServer.csproj --startup-project AvansMealDeal/AvansMealDeal.UserInterface.WebService/AvansMealDeal.UserInterface.WebService.csproj database update --context DbContextApplicationSqlServer --connection "$DATABASES_APPLICATION"
+        run: dotnet ef --project AvansMealDeal/AvansMealDeal.Infrastructure.Application.SQLServer/AvansMealDeal.Infrastructure.Application.SQLServer.csproj --startup-project AvansMealDeal/AvansMealDeal.UserInterface.WebService/AvansMealDeal.UserInterface.WebService.csproj database update --context DbContextApplicationSqlServer
 
       - name: Deploy EF migrations identity database
-        run: dotnet ef --project AvansMealDeal/AvansMealDeal.Infrastructure.Identity.SQLServer/AvansMealDeal.Infrastructure.Identity.SQLServer.csproj --startup-project AvansMealDeal/AvansMealDeal.UserInterface.WebService/AvansMealDeal.UserInterface.WebService.csproj database update --context DbContextIdentitySqlServer --connection "$DATABASES_IDENTITY"
+        run: dotnet ef --project AvansMealDeal/AvansMealDeal.Infrastructure.Identity.SQLServer/AvansMealDeal.Infrastructure.Identity.SQLServer.csproj --startup-project AvansMealDeal/AvansMealDeal.UserInterface.WebService/AvansMealDeal.UserInterface.WebService.csproj database update --context DbContextIdentitySqlServer
 
   azure-steps:
     runs-on: windows-latest
